# PureC_SnakeGame

./: .gitignore  CMakeLists.txt  LICENSE  README.md  WINDOWS_FIX.md  build.bat  build.sh  demo.sh  run.bat  run.sh
config/: game.conf  settings.cfg
src/: CMakeLists.txt  README.md  main.c
src/config/: config.c  config.h
src/game/: ai.c  ai.h  game.c  game.h
src/platform/: platform.h  platform_unix.c  platform_web.c  platform_windows.c
src/ui/: ui.c  ui.h
web/: shell.html
